--- a/app/board.component.css
+++ b/app/board.component.css
@@ -11,9 +11,7 @@ h3 {
 .grid {
   margin: 0;
 }
-.col-1-4 {
-  width: 25%;
-}
+
 .module {
 	padding: 20px;
 	text-align: center;
@@ -31,7 +29,12 @@ h4 {
   cursor: pointer;
   color: #607d8b;
 }
-
+.grid-pad {
+  padding: 10px 0;
+}
+.grid-pad > [class*='col-']:last-of-type {
+  padding-right: 20px;
+}
 @media (max-width: 600px) {
 	.module {
 	  font-size: 10px;
@@ -74,41 +77,9 @@ tr.selected:hover {
 }
 
 .list-group.search-popup{
-  position:absolute;
+  position:fixed;
   color:#ccc;
 }
-
-.btn-input{
-    margin-top: 4px;
-    height: 25px;
-    position: absolute;
-    margin-left: 88%;
-}
-
-tbody {
-    overflow-y: auto;
-    display: block;
-    height: 250px;
-    width:100%;
-}
-
-tbody > tr{
-    width: 100%;
-    display: table;
-}
-
-.table-buttons {
-  text-align: right;
-}
-
-.player-input{
-  display:flex;
-}
-
-.btn-footer{
-  margin-bottom:40px;
-}
-
 
 .simple-row{
   border-bottom: 1px solid #ccc;
@@ -123,12 +94,13 @@ tbody > tr{
   display:flex;
    width:100%;
    background-color: rgba(234,234,234,0.2);
-   height:120px;
+  color:#fff;
 }
 
 .full-row > div > .title{
-  font-size:32px;
+  font-size:38px;
   height:60px;
+  padding-left: 5px;
 }
 
 .full-row > div > div > button{
@@ -137,22 +109,49 @@ tbody > tr{
   margin-right:auto;
 }
 
-.full-row > div > .data{
-  height:30px;
-}
 .full-row .data{
   height:30px;
+  font-size:18px;
+  padding-left: 10px
 }
 
 .simple-row > .title{
-  width:30%;
+  width:38%;
   font-size:25px;
+  padding-left: 5px;
+  margin-top:-5px
 }
 
-.simple-row > .data{
-  width:15%;
-  font-size:15px;
-  padding:4px
+.simple-row  .data{
+  width:20%;
+  font-size:16px;
+  padding:4px;
+  padding-left: 10px
+
+}
+.simple-row  .icon{
+  width:2%;
+  font-size:16px;
+  padding:4px;
+}
+
+.full-row i{
+  padding-right:3px;
+}
+
+.btn-board{
+    border-radius: 0;
+    width: 60px;
+    height: 60px;
+    font-size: 28px;
+}
+
+.btn-board2{
+    border-radius: 0;
+    width: 60px;
+    height: 60px;
+    font-size: 28px;
+    background-color:#ccc;
 }
 /*
 Copyright 2016 Google Inc. All Rights Reserved.
