--- a/app/dashboard.component.html
+++ b/app/dashboard.component.html
@@ -7,11 +7,12 @@
 	</div>
 </div>
 <div class="row">
+	<div class="col-xs-4 ">
+		<h4>tu apuesta</h4>
+		<h1><i style="font-size:30px" class="fa fa-usd"></i>{{getTotalBetAmount()}}</h1>
+	</div>
 	<div class="col-xs-8 ">
 		<chat></chat>
-	</div>
-	<div class="col-xs-4 ">
-		<h1>{{getTotalBetAmount()}}</h1>
 	</div>
 </div>
 
