--- a/app/chat.component.css
+++ b/app/chat.component.css
@@ -1,158 +1,40 @@
 
-*, *:after, *:before {
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
-}
-h3 {
-  text-align: center; margin-bottom: 0;
+td{
+  display:inline;
+      box-shadow: inset 0 0px 2px #fff;
 }
 
-.grid {
-  margin: 0;
+tr{
+  height:40px;
 }
 
-.module {
-	padding: 20px;
-	text-align: center;
-	color: #eee;
-	max-height: 120px;
-	min-width: 120px;
-	background-color: #607D8B;
-	border-radius: 2px;
-}
-h4 {
-  position: relative;
-}
-.module:hover {
-  background-color: #EEE;
-  cursor: pointer;
-  color: #607d8b;
-}
-.grid-pad {
-  padding: 10px 0;
-}
-.grid-pad > [class*='col-']:last-of-type {
-  padding-right: 20px;
-}
-@media (max-width: 600px) {
-	.module {
-	  font-size: 10px;
-	  max-height: 75px; }
-}
-@media (max-width: 1024px) {
-	.grid {
-	  margin: 0;
-	}
-	.module {
-	  min-width: 60px;
-	}
+.msg{
+  font-family:arvo;
+  color:#fafafa;
+  background-color:#111;
+  padding-left:10px;
+  padding-right:10px;
 }
 
-.selected{
-   background-color: #CFD8DC !important;
-      color: white;
+.user-msg{
+    float:right;
+    background-color:green;
 }
 
-tr.selected:hover {
-    background-color: #BBD8DC !important;
-    color: white;
-    cursor: pointer;
-  }
-
-.search-result{
-  border-bottom: 1px solid gray;
-  border-left: 1px solid gray;
-  border-right: 1px solid gray;
-  width:195px;
-  height: 20px;
-  padding: 5px;
-  background-color: white;
-  cursor: pointer;
+.chat{
+  height:250px;
+  margin-top:15px;
 }
 
-#search-box{
-  width: 200px;
-  height: 20px;
+.send-button{
+  width:70px;
 }
 
-.list-group.search-popup{
-  position:fixed;
-  color:#ccc;
+.message-box{
+  width:calc(100% - 80px);
 }
 
-.simple-row{
-  border-bottom: 1px solid #ccc;
-  display:flex;
-  width:100%;
-  height:30px;
-  cursor:pointer;
-}
 
-.full-row{
-  border-bottom: 1px solid #ccc;
-  display:flex;
-   width:100%;
-   background-color: rgba(234,234,234,0.2);
-  color:#fff;
-}
-
-.full-row > div > .title{
-  font-size:38px;
-  height:60px;
-  padding-left: 5px;
-}
-
-.full-row > div > div > button{
-  margin-top:10px;
-  margin-left:auto;
-  margin-right:auto;
-}
-
-.full-row .data{
-  height:30px;
-  font-size:18px;
-  padding-left: 10px
-}
-
-.simple-row > .title{
-  width:38%;
-  font-size:25px;
-  padding-left: 5px;
-  margin-top:-5px
-}
-
-.simple-row  .data{
-  width:20%;
-  font-size:16px;
-  padding:4px;
-  padding-left: 10px
-
-}
-.simple-row  .icon{
-  width:2%;
-  font-size:16px;
-  padding:4px;
-}
-
-.full-row i{
-  padding-right:3px;
-}
-
-.btn-board{
-    border-radius: 0;
-    width: 60px;
-    height: 60px;
-    font-size: 28px;
-}
-
-.btn-board2{
-    border-radius: 0;
-    width: 60px;
-    height: 60px;
-    font-size: 28px;
-    background-color:#ccc;
-}
 /*
 Copyright 2016 Google Inc. All Rights Reserved.
 Use of this source code is governed by an MIT-style license that
