--- a/app/dashboard.component.css
+++ b/app/dashboard.component.css
@@ -8,6 +8,25 @@ h3 {
   text-align: center; margin-bottom: 0;
 }
 
+h1{
+      display: inline;
+    color: #fafafa;
+    background-color: #111;
+    padding-left: 20px;
+    padding-right: 20px;
+    font-family: arvo;
+}
+
+h4{
+    display: table;
+    color: #fafafa;
+    background-color: #111;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding:10px;
+    font-family: arvo;
+}
+
 .grid {
   margin: 0;
 }
