--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,10 +1,10 @@
 <nav *ngIf="services.user.email" id="mainNav" class="navbar navbar-default navbar-fixed-top">
-	<div class="container-fluid">
+	<div class="container-fluid" style="background-color:#111">
 		<div class="navbar-header">
 			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
 				<span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
 			</button>
-			<a class="navbar-brand page-scroll" href="#page-top">71mb4</a>
+			<a class="navbar-brand page-scroll" style="color:#fafafa"  href="#page-top">71mb4</a>
 		</div>
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="float: right;position: relative;top: 9px;">
 			<user-session *ngIf="services.user.email" (return)="nav = $event" (logOut)="services.logout();"></user-session>
