--- a/app/board.component.html
+++ b/app/board.component.html
@@ -1,46 +1,46 @@
 <div style="margin-bottom:40px;margin-top:40px;display:inline-table">
 	<table>
 		<tr>
-			<td><button type="button" [class.bet]="isSelected(1)" class="btn btn-primary btn-board" (click)="setBet(1)">1</button></td>
-			<td><button type="button" class="btn btn-primary btn-board2" (click)="setBet(4)">4</button></td>
-			<td><button type="button" class="btn btn-primary btn-board" (click)="setBet(7)">7</button></td>
-			<td><button type="button" class="btn btn-primary btn-board2" (click)="setBet(10)">10</button></td>
-			<td><button type="button" class="btn btn-primary btn-board" (click)="setBet(13)">13</button></td>
-			<td><button type="button" class="btn btn-primary btn-board2" (click)="setBet(16)">16</button></td>
-			<td><button type="button" class="btn btn-primary btn-board" (click)="setBet(19)">19</button></td>
-			<td><button type="button" class="btn btn-primary btn-board2" (click)="setBet(22)">22</button></td>
-			<td><button type="button" class="btn btn-primary btn-board" (click)="setBet(25)">25</button></td>
-			<td><button type="button" class="btn btn-primary btn-board2" (click)="setBet(28)">28</button></td>
-			<td><button type="button" class="btn btn-primary btn-board" (click)="setBet(31)">31</button></td>
-			<td><button type="button" class="btn btn-primary btn-board2" (click)="setBet(34)">34</button></td>
+			<td><button type="button" [class.winnerNumber]="winnerNumber==1" [class.hideNumber]="hide1st" [class.bet]="isSelected(1)" class="btn btn-primary btn-board" (click)="setBet(1)">1</button></td>
+			<td><button type="button" [class.winnerNumber]="winnerNumber==4" [class.hideNumber]="hide1st" [class.bet]="isSelected(4)" class="btn btn-primary btn-board2" (click)="setBet(4)">4</button></td>
+			<td><button type="button" [class.winnerNumber]="winnerNumber==7" [class.hideNumber]="hide1st" [class.bet]="isSelected(7)" class="btn btn-primary btn-board" (click)="setBet(7)">7</button></td>
+			<td><button type="button" [class.winnerNumber]="winnerNumber==10" [class.hideNumber]="hide1st" [class.bet]="isSelected(10)" class="btn btn-primary btn-board2" (click)="setBet(10)">10</button></td>
+			<td><button type="button" [class.winnerNumber]="winnerNumber==13" [class.hideNumber]="hide2nd" [class.bet]="isSelected(13)" class="btn btn-primary btn-board" (click)="setBet(13)">13</button></td>
+			<td><button type="button" [class.winnerNumber]="winnerNumber==16" [class.hideNumber]="hide2nd" [class.bet]="isSelected(16)" class="btn btn-primary btn-board2" (click)="setBet(16)">16</button></td>
+			<td><button type="button" [class.winnerNumber]="winnerNumber==19" [class.hideNumber]="hide2nd" [class.bet]="isSelected(19)" class="btn btn-primary btn-board" (click)="setBet(19)">19</button></td>
+			<td><button type="button" [class.winnerNumber]="winnerNumber==22" [class.hideNumber]="hide2nd" [class.bet]="isSelected(22)" class="btn btn-primary btn-board2" (click)="setBet(22)">22</button></td>
+			<td><button type="button" [class.winnerNumber]="winnerNumber==25" [class.hideNumber]="hide3rd" [class.bet]="isSelected(25)" class="btn btn-primary btn-board" (click)="setBet(25)">25</button></td>
+			<td><button type="button" [class.winnerNumber]="winnerNumber==28" [class.hideNumber]="hide3rd" [class.bet]="isSelected(28)" class="btn btn-primary btn-board2" (click)="setBet(28)">28</button></td>
+			<td><button type="button" [class.winnerNumber]="winnerNumber==31" [class.hideNumber]="hide3rd" [class.bet]="isSelected(31)" class="btn btn-primary btn-board" (click)="setBet(31)">31</button></td>
+			<td><button type="button" [class.winnerNumber]="winnerNumber==34" [class.hideNumber]="hide3rd" [class.bet]="isSelected(34)" class="btn btn-primary btn-board2" (click)="setBet(34)">34</button></td>
 		</tr>
 		<tr>
-			<td><button type="button" class="btn btn-primary btn-board2" (click)="setBet(2)">2</button></td>
-			<td><button type="button" class="btn btn-primary btn-board" (click)="setBet(5)">5</button></td>
-			<td><button type="button" class="btn btn-primary btn-board2" (click)="setBet(8)">8</button></td>
-			<td><button type="button" class="btn btn-primary btn-board" (click)="setBet(11)">11</button></td>
-			<td><button type="button" class="btn btn-primary btn-board2" (click)="setBet(14)">14</button></td>
-			<td><button type="button" class="btn btn-primary btn-board" (click)="setBet(17)">17</button></td>
-			<td><button type="button" class="btn btn-primary btn-board2" (click)="setBet(20)">20</button></td>
-			<td><button type="button" class="btn btn-primary btn-board" (click)="setBet(23)">23</button></td>
-			<td><button type="button" class="btn btn-primary btn-board2" (click)="setBet(26)">26</button></td>
-			<td><button type="button" class="btn btn-primary btn-board" (click)="setBet(29)">29</button></td>
-			<td><button type="button" class="btn btn-primary btn-board2" (click)="setBet(32)">32</button></td>
-			<td><button type="button" class="btn btn-primary btn-board" (click)="setBet(35)">35</button></td>
+			<td><button type="button" [class.winnerNumber]="winnerNumber==2" [class.hideNumber]="hide1st" [class.bet]="isSelected(2)" class="btn btn-primary btn-board2" (click)="setBet(2)">2</button></td>
+			<td><button type="button" [class.winnerNumber]="winnerNumber==5" [class.hideNumber]="hide1st" [class.bet]="isSelected(5)" class="btn btn-primary btn-board" (click)="setBet(5)">5</button></td>
+			<td><button type="button" [class.winnerNumber]="winnerNumber==8" [class.hideNumber]="hide1st" [class.bet]="isSelected(8)" class="btn btn-primary btn-board2" (click)="setBet(8)">8</button></td>
+			<td><button type="button" [class.winnerNumber]="winnerNumber==11" [class.hideNumber]="hide1st" [class.bet]="isSelected(11)" class="btn btn-primary btn-board" (click)="setBet(11)">11</button></td>
+			<td><button type="button" [class.winnerNumber]="winnerNumber==14" [class.hideNumber]="hide2nd" [class.bet]="isSelected(14)" class="btn btn-primary btn-board2" (click)="setBet(14)">14</button></td>
+			<td><button type="button" [class.winnerNumber]="winnerNumber==17" [class.hideNumber]="hide2nd" [class.bet]="isSelected(17)" class="btn btn-primary btn-board" (click)="setBet(17)">17</button></td>
+			<td><button type="button" [class.winnerNumber]="winnerNumber==20" [class.hideNumber]="hide2nd" [class.bet]="isSelected(20)" class="btn btn-primary btn-board2" (click)="setBet(20)">20</button></td>
+			<td><button type="button" [class.winnerNumber]="winnerNumber==23" [class.hideNumber]="hide2nd" [class.bet]="isSelected(23)" class="btn btn-primary btn-board" (click)="setBet(23)">23</button></td>
+			<td><button type="button" [class.winnerNumber]="winnerNumber==26" [class.hideNumber]="hide3rd" [class.bet]="isSelected(26)" class="btn btn-primary btn-board2" (click)="setBet(26)">26</button></td>
+			<td><button type="button" [class.winnerNumber]="winnerNumber==29" [class.hideNumber]="hide3rd" [class.bet]="isSelected(29)" class="btn btn-primary btn-board" (click)="setBet(29)">29</button></td>
+			<td><button type="button" [class.winnerNumber]="winnerNumber==32" [class.hideNumber]="hide3rd" [class.bet]="isSelected(32)" class="btn btn-primary btn-board2" (click)="setBet(32)">32</button></td>
+			<td><button type="button" [class.winnerNumber]="winnerNumber==35" [class.hideNumber]="hide3rd" [class.bet]="isSelected(35)" class="btn btn-primary btn-board" (click)="setBet(35)">35</button></td>
 		</tr>
 		<tr>
-			<td><button type="button" class="btn btn-primary btn-board" (click)="setBet(3)">3</button></td>
-			<td><button type="button" class="btn btn-primary btn-board2" (click)="setBet(6)">6</button></td>
-			<td><button type="button" class="btn btn-primary btn-board" (click)="setBet(9)">9</button></td>
-			<td><button type="button" class="btn btn-primary btn-board2" (click)="setBet(12)">12</button></td>
-			<td><button type="button" class="btn btn-primary btn-board" (click)="setBet(15)">15</button></td>
-			<td><button type="button" class="btn btn-primary btn-board2" (click)="setBet(18)">18</button></td>
-			<td><button type="button" class="btn btn-primary btn-board" (click)="setBet(21)">21</button></td>
-			<td><button type="button" class="btn btn-primary btn-board2" (click)="setBet(24)">24</button></td>
-			<td><button type="button" class="btn btn-primary btn-board" (click)="setBet(27)">27</button></td>
-			<td><button type="button" class="btn btn-primary btn-board2" (click)="setBet(30)">30</button></td>
-			<td><button type="button" class="btn btn-primary btn-board" (click)="setBet(33)">33</button></td>
-			<td><button type="button" class="btn btn-primary btn-board2" (click)="setBet(36)">36</button></td>
+			<td><button type="button" [class.winnerNumber]="winnerNumber==3" [class.hideNumber]="hide1st" [class.bet]="isSelected(3)" class="btn btn-primary btn-board" (click)="setBet(3)">3</button></td>
+			<td><button type="button" [class.winnerNumber]="winnerNumber==6" [class.hideNumber]="hide1st" [class.bet]="isSelected(6)" class="btn btn-primary btn-board2" (click)="setBet(6)">6</button></td>
+			<td><button type="button" [class.winnerNumber]="winnerNumber==9" [class.hideNumber]="hide1st" [class.bet]="isSelected(9)" class="btn btn-primary btn-board" (click)="setBet(9)">9</button></td>
+			<td><button type="button" [class.winnerNumber]="winnerNumber==12" [class.hideNumber]="hide1st" [class.bet]="isSelected(12)" class="btn btn-primary btn-board2" (click)="setBet(12)">12</button></td>
+			<td><button type="button" [class.winnerNumber]="winnerNumber==15" [class.hideNumber]="hide2nd" [class.bet]="isSelected(15)" class="btn btn-primary btn-board" (click)="setBet(15)">15</button></td>
+			<td><button type="button" [class.winnerNumber]="winnerNumber==18" [class.hideNumber]="hide2nd" [class.bet]="isSelected(18)" class="btn btn-primary btn-board2" (click)="setBet(18)">18</button></td>
+			<td><button type="button" [class.winnerNumber]="winnerNumber==21" [class.hideNumber]="hide2nd" [class.bet]="isSelected(21)" class="btn btn-primary btn-board" (click)="setBet(21)">21</button></td>
+			<td><button type="button" [class.winnerNumber]="winnerNumber==24" [class.hideNumber]="hide2nd" [class.bet]="isSelected(24)" class="btn btn-primary btn-board2" (click)="setBet(24)">24</button></td>
+			<td><button type="button" [class.winnerNumber]="winnerNumber==27" [class.hideNumber]="hide3rd" [class.bet]="isSelected(27)" class="btn btn-primary btn-board" (click)="setBet(27)">27</button></td>
+			<td><button type="button" [class.winnerNumber]="winnerNumber==30" [class.hideNumber]="hide3rd" [class.bet]="isSelected(30)" class="btn btn-primary btn-board2" (click)="setBet(30)">30</button></td>
+			<td><button type="button" [class.winnerNumber]="winnerNumber==33" [class.hideNumber]="hide3rd" [class.bet]="isSelected(33)" class="btn btn-primary btn-board" (click)="setBet(33)">33</button></td>
+			<td><button type="button" [class.winnerNumber]="winnerNumber==36" [class.hideNumber]="hide3rd" [class.bet]="isSelected(36)" class="btn btn-primary btn-board2" (click)="setBet(36)">36</button></td>
 		</tr>
 	</table>
 </div>
