--- a/app/chat.component.html
+++ b/app/chat.component.html
@@ -1,5 +1,5 @@
 <div class="chat">
-	<div id="messages" style="overflow-y:hidden; height:100%">
+	<div id="messages" style="overflow-y:auto; height:100%">
 		<table class="table">
 			<tbody>
 				<tr *ngFor="let log of services.timba.log">
