--- a/app/home.component.html
+++ b/app/home.component.html
@@ -10,21 +10,18 @@
 			</ul>
 		</div>
 
-		<form [formGroup]="formGroup" *ngIf="nav=='login'" role="form">
+		<form *ngIf="nav=='login'" role="form">
 			<div class="form-group">
-				<input formControlName="email" type="email" [(ngModel)]="user.email" placeholder="Email" class="form-control input-lg" id="email">
+				<input type="email" [(ngModel)]="user.email" placeholder="Email" class="form-control input-lg" id="email"  [ngModelOptions]="{standalone: true}">
 			</div>
-			<div *ngIf="formErrors.email" class="alert alert-danger">
-				{{ formErrors.email }}
+			<div *ngIf="err" class="alert alert-danger">
+				{{ err.msg }}
 			</div>
 			<div class="form-group">
 				<div style="display:flex">
-					<input formControlName="password" type="password" [(ngModel)]="user.password" style="margin-right:15px" placeholder="Password"
-						class="form-control" id="pwd">
+					<input  type="password" [(ngModel)]="user.password" style="margin-right:15px" placeholder="Password"
+						class="form-control" id="pwd" [ngModelOptions]="{standalone: true}">
 					<button type="submit" (click)="login()" class="btn btn-primary">Log in</button>
-				</div>
-				<div *ngIf="formErrors.password" class="alert alert-danger">
-					{{ formErrors.password }}
 				</div>
 			</div>
 			<div class="form-group">
