--- a/app/menu.component.html
+++ b/app/menu.component.html
@@ -18,6 +18,22 @@
 		<i class="fa fa-clock-o" style="text-align: center;padding-top: 12px;padding-right: 5px;"></i> {{timeCountDown}}
 	</div>
 	<div class="menu-item" style="width:50px">
-		<i class="fa fa-chevron-down" style="width: 100%;height: 100%;text-align: center;padding-top: 12px;"></i>
+		<i class="fa" [class.fa-chevron-down]="!details" [class.fa-chevron-up]="details" (click)="details = !details" style="cursor:pointer;width: 100%;height: 100%;text-align: center;padding-top: 12px;"></i>
+	</div>
+</div>
+
+<div class="details" *ngIf="details">
+	<div style="width:40%;display:flex;margin:20px">
+		<h5>Cantidad de Jugadores: <h3>{{services.timba.players.length}}</h3></h5>
+		<h5>Monto acumulado: <h3>$ {{getTotalAmount()}}</h3></h5>
+		<h5>Apuesta promedio: <h3>$ {{getTotalAmount()/services.timba.players.length}}</h3></h5>
+	</div>
+	<div style="width:60%;display:flex">
+		<table style="display:flex;overflow-y:auto">
+			<tr style="display:flex" *ngFor="let player of services.timba.players">
+				<td style="width:500px">{{player.email}}</td>
+				<td >$ {{getPlayerAmount(player)}}</td>
+			</tr>
+		</table>
 	</div>
 </div>
