--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,24 +1,75 @@
-<nav *ngIf="services.user.email" id="mainNav" class="navbar navbar-default navbar-fixed-top">
-	<div class="container-fluid" style="background-color:#111">
-		<div class="navbar-header">
-			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-				<span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
-			</button>
-			<a class="navbar-brand page-scroll" style="color:#fafafa"  href="#page-top">71mb4</a>
-		</div>
-		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="float: right;position: relative;top: 9px;">
-			<user-session *ngIf="services.user.email" (return)="nav = $event" (logOut)="services.logout();"></user-session>
+<div *ngIf="nav=='welcome' && services.user.email" class="timba-modal">
+	<div class="modal-content">
+		<button (click)="nav='dashboard'" class="btn btn-default btn-lg" style="float:right;margin-right:-30px"><i  class="fa fa-times"></i></button>
+		<h3>¡Bienvenidos nuevamente!</h3>
+		<h4>Volvió la timba tradicional</h4>
+		<p>Es de público conocimiento que la famosa "nueva timba" no tuvo la repercusión que esperaba. Por lo tanto, ante las fuertes
+			críticas, se tomó la decisión de volver a la timba tradicional <br>Las reglas son similares aunque hay algunas cositas
+			nuevas. Las veremos a continuación</p>
+
+		<h4>Nuevo diseño</h4>
+		<p>Más compacto, simple, elegante y customizable</p>
+
+		<h4>True randomness</h4>
+		<p>La aleatoriedad ahora es más confiable ya que, a diferencia de los algoritmos tradicionales (pseudo-aleatorios), la timba
+			consume un servicio web que genera números aleatorios a partir de ruido atmosférico (random.org)</p>
+
+		<h4>Nuevo host</h4>
+		<p>Ya no es un host local, ahora se puede acceder sin necesidad de conectarse a la red!</p>
+
+		<h4>Versión Mobile</h4>
+		<p>También podes acceder desde el celular</p>
+
+		<div style="display:block;width:100%;margin-bottom:40px;">
+			<button (click)="nav='dashboard'" class="btn btn-default" style="float:left">Cerrar</button>
+			<button (click)="nav='dashboard'" class="btn btn-primary" style="float:right">Continuar</button>
+			<button (click)="nav='rules'" class="btn btn-primary" style="float:right">Ver reglas</button>
 		</div>
 	</div>
-</nav>
-<home *ngIf="!services.user.email" ></home>
+</div>
+
+<div *ngIf="nav=='rules' && services.user.email" class="timba-modal">
+	<div class="modal-content">
+		<button (click)="nav='dashboard'" class="btn btn-default btn-lg" style="float:right;margin-right:-30px"><i  class="fa fa-times"></i></button>
+		<h3>Reglas</h3>
+		<p>1. Se juega a las 17hs.</p>
+		<p>2. Paso a recaudar a 16:45hs.</p>
+		<p>3. Apuesta mínima $10. Apuesta máxima $500.</p>
+		<p>4. Si solo querés ver, podes no apostar.</p>
 
 
-  <section *ngIf="services.user.email" id="about">
-	<div class="container">
-		<div class="row">
-			<dashboard *ngIf="services.timba.numbers && services.user.email && nav=='dashboard'" ></dashboard>
-			<admin *ngIf="nav=='admin'" (return)="nav = $event" ></admin>
+		<div style="display:block;width:100%;margin-bottom:40px;">
+			<button (click)="nav='dashboard'" class="btn btn-primary" style="float:right">Aceptar</button>
 		</div>
 	</div>
-</section>
+</div>
+
+<roulette *ngIf="services.timba.closed"></roulette>
+
+<div [class.bg-blur]="(nav !='dashboard' || services.timba.closed) && services.user.email " class="intro-header">
+	<home *ngIf="!services.user.email"></home>
+	<section *ngIf="services.user.email" id="about" style="height:100%">
+		<user-session (return)="nav = $event" (logOut)="services.logout();"></user-session>
+		<div class="container" style="height:100%">
+			<div class="row" style="height:100%">
+				<div class="col-lg-4" style="height:100%">
+					<players *ngIf="showPlayers"></players>
+				</div>
+				<div class="col-lg-4" style="height:100%">
+					<div class="row" style="height:30%">
+						<info *ngIf="showInfo"></info>
+					</div>
+					<div class="row" style="height:50%">
+						<cursor (showOrHide)="showOrHide($event)" *ngIf="services.user.email && nav=='dashboard'"></cursor>
+					</div>
+					<div class="row" style="height:20%">
+						<bet *ngIf="showBet"></bet>
+					</div>
+				</div>
+				<div class="col-lg-4" style="height:100%">
+					<chat *ngIf="showChat"></chat>
+				</div>
+			</div>
+		</div>
+	</section>
+</div>
