--- a/css/style.css
+++ b/css/style.css
@@ -574,24 +574,28 @@ fieldset[disabled] .btn {
 .btn-hg.btn > [class^="fui-"] {
   top: 2px;
 }
-.btn-default {
-  color: #ffffff;
-  background-color: #bdc3c7;
+.btn-default,.btn-default:focus {
+  color: #cecece;
+      background-color: transparent;
+    border: 0;
+    transition: text-shadow 0.4s, color 0.4s;
 }
 .btn-default:hover,
-.btn-default:focus,
 .btn-default:active,
 .btn-default.active,
 .open .dropdown-toggle.btn-default {
-  color: #ffffff;
-  background-color: #cacfd2;
-  border-color: #cacfd2;
+    transition: text-shadow 0.4s, color 0.4s;
+    background-color: transparent;
+    color: #fafafa;
+    text-shadow: 0px 0px 20px #fff;
 }
 .btn-default:active,
 .btn-default.active,
 .open .dropdown-toggle.btn-default {
-  background: #a1a6a9;
-  border-color: #a1a6a9;
+  transition: text-shadow 0.4s, color 0.4s;
+    background-color: transparent;
+    color: #fafafa;
+    text-shadow: 0px 0px 0px #fff;
 }
 .btn-default.disabled,
 .btn-default[disabled],
@@ -613,7 +617,9 @@ fieldset[disabled] .btn-default.active {
 }
 .btn-primary {
   color: #ffffff;
-  background-color: #1abc9c;
+  background-color: rgba(200,200,200,0.3);
+  border:0;
+  border-radius:0;
 }
 .btn-primary:hover,
 .btn-primary:focus,
@@ -621,14 +627,16 @@ fieldset[disabled] .btn-default.active {
 .btn-primary.active,
 .open .dropdown-toggle.btn-primary {
   color: #ffffff;
-  background-color: #48c9b0;
-  border-color: #48c9b0;
+  background-color: rgba(200,200,200,0.1);
+  border:0;
+  border-radius:0;
 }
 .btn-primary:active,
 .btn-primary.active,
 .open .dropdown-toggle.btn-primary {
-  background: #16a085;
-  border-color: #16a085;
+  background-color: rgba(120,120,120,0);
+  border:0;
+  border-radius:0;
 }
 .btn-primary.disabled,
 .btn-primary[disabled],
@@ -4773,3 +4781,12 @@ footer p {
 		
 		
 	}
+
+
+  .roulette-cell{
+    color: #fff;
+    position: absolute;
+    left: calc(50% - 50px);
+    width: 100px;
+    top: calc(200px - 14px);
+}
