--- a/app/players.component.css
+++ b/app/players.component.css
@@ -12,3 +12,10 @@
     border-bottom: 1px solid rgba(200,200,200,0.3);
 
 }
+
+.players{
+      height: 100%;
+    overflow-y: auto;
+    width: 80%;
+    position: absolute;
+}
