--- a/app/players.component.html
+++ b/app/players.component.html
@@ -1,8 +1,8 @@
 <div class="blur-bg">
 
 </div>
-<div>
-	<table style="display:table;width:80%;overflow-y:auto">
+<div class="players">
+	<table style="height:100%;width:100%;">
 		<tr class="player-row" *ngFor="let player of services.timba.players">
 			<td style="text-align:left;width:85%">{{player.email}}</td>
 			<td style="width:15%">$ {{player.bets * services.timba.betAmount}}</td>
